--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -231,15 +231,14 @@
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.lineOptions"
-                                                            type="button" value="Edit..." 
+                                                            type="button" value="Edit..." id="editLine" 
                                                             class="form-control wi-form-control"
                                                             ng-click="wiModal.lineStyleButtonClicked($index)"
                                                             ng-change="wiModal.curvesChanged[$index] = true;">
                                                 </td>
                                                 <td>
-                                                {{curve.symbolOptions}}
                                                     <input ng-model="curve.symbolOptions"
-                                                            type="button" value="Edit..." 
+                                                            type="button" value="Edit..." id="editSymbol" 
                                                             class="form-control wi-form-control"
                                                             ng-click="wiModal.symbolStyleButtonClicked($index)"
                                                             ng-change="wiModal.curvesChanged[$index] = true;">
