submit on enter in dialog

--- a/source/dialogs/blank-logplot/blank-logplot-modal.html
+++ b/source/dialogs/blank-logplot/blank-logplot-modal.html
@@ -13,6 +13,7 @@
                             <input type="text" class="form-control"
                                    ng-model="wiModal.name"
                                    ng-click="wiModal.error = null"
+                                   wi-enter="wiModal.onOkButtonClicked()"
                                    required>
                         </div>
                     </div>
