--- a/source/dialogs/prompt/prompt-modal.html
+++ b/source/dialogs/prompt/prompt-modal.html
@@ -8,8 +8,10 @@
 			<div class="modal-body text-center">
 				<form class="form-horizontal" action="" name="modalBlankPlot">
 					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" class="form-control" ng-model="wiModal.input" ng-click="wiModal.error = null" required>
+						<div class="col-sm-12">
+							<input type="text" class="form-control"
+								ng-model="wiModal.input" ng-click="wiModal.error = null"
+								wi-enter="wiModal.close(wiModal.input)" required>
 						</div>
 					</div>
 				</form>
