--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -18,7 +18,7 @@
                                                 <label for="isShowTitle" class="normal-text">
                                                     <input type="checkbox" id="isShowTitle"
                                                            value="" name=""
-                                                           ng-model="wiModal.props.general.isShowTitle">
+                                                           ng-model="wiModal.props.general.showTitle">
                                                     Show title
                                                 </label>
                                             </div>
@@ -29,7 +29,7 @@
                                                 <input type="text" class="form-control wi-form-control"
                                                        value="" name="title" id="title"
                                                         ng-model="wiModal.props.general.title"
-                                                       ng-disabled="!wiModal.props.general.isShowTitle">
+                                                       ng-disabled="!wiModal.props.general.showTitle">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -37,11 +37,10 @@
                                                 Top Justification
                                             </label>
                                             <div class="col-sm-7">
-                                            {{wiModal.props.general.topJustification}}
                                                 <select ng-model="wiModal.props.general.topJustification"
-                                                        name="topJust" value="" id="topJust"
+                                                        name="topJust" id="topJust"
                                                         class="form-control wi-form-control"
-                                                        ng-disabled="!wiModal.props.general.isShowTitle">
+                                                        ng-disabled="!wiModal.props.general.showTitle">
                                                     <option value="Left">Left</option>
                                                     <option value="Center">Center</option>
                                                     <option value="Right">Right</option>
@@ -54,9 +53,9 @@
                                             </label>
                                             <div class="col-sm-7">
                                                 <select ng-model="wiModal.props.general.bottomJustification"
-                                                        name="bottomJust" value=""
+                                                        name="bottomJust"
                                                         class="form-control wi-form-control" id="bottomJust"
-                                                        ng-disabled="!wiModal.props.general.isShowTitle">
+                                                        ng-disabled="!wiModal.props.general.showTitle">
                                                     <option value="Left">Left</option>
                                                     <option value="Center">Center</option>
                                                     <option value="Right">Right</option>
@@ -72,15 +71,15 @@
                                             <div class="col-sm-5">
                                                 <label for="isShowLabels" class="normal-text">
                                                     <input type="checkbox" id="isShowLabels" value=""
-                                                           ng-model="wiModal.props.general.isShowLabels">
+                                                           ng-model="wiModal.props.general.showLabels">
                                                     Show labels
                                                 </label>
                                             </div>
                                             <div class="col-sm-7">
                                                 <label for="isShowEndLabels" class="normal-text">
                                                     <input type="checkbox" id="isShowEndLabels" value=""
-                                                           ng-model="wiModal.props.general.isShowEndLabels"
-                                                            ng-disabled="!wiModal.props.general.isShowLabels">
+                                                           ng-model="wiModal.props.general.showEndLabels"
+                                                            ng-disabled="!wiModal.props.general.showLabels">
                                                     Show end labels
                                                 </label>
                                             </div>
@@ -92,7 +91,7 @@
                                             <div class="col-sm-7">
                                                 <input type="text" class="form-control wi-form-control"
                                                        value="" name="format" id="format"
-                                                        ng-model="wiModal.props.general.format" ng-disabled="!wiModal.props.general.isShowLabels">
+                                                        ng-model="wiModal.props.general.format" ng-disabled="!wiModal.props.general.showLabels">
                                             </div>
                                         </div>
                                     </div>
@@ -104,7 +103,7 @@
                                             <div class="col-sm-7">
                                                 <label for="isShowValueGrid" class="normal-text">
                                                     <input type="checkbox" id="isShowValueGrid" value=""
-                                                           ng-model="wiModal.props.general.isShowValueGrid">
+                                                           ng-model="wiModal.props.general.showValueGrid">
                                                     Show Value Grid
                                             </label>
                                             </div>
@@ -114,7 +113,7 @@
                                             <div class="col-sm-7">
                                                 <input type="number" class="form-control wi-form-control"
                                                        value="" name="majorTicks" id="majorTicks"
-                                                        ng-model="wiModal.props.general.majorTicks" ng-disabled="!wiModal.props.general.isShowValueGrid">
+                                                        ng-model="wiModal.props.general.majorTicks" ng-disabled="!wiModal.props.general.showValueGrid">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -123,14 +122,14 @@
                                                 <input type="number" class="form-control wi-form-control"
                                                        value="" name="minorTicks" id="minorTicks"
                                                         ng-model="wiModal.props.general.minorTicks"
-                                                       ng-disabled="!wiModal.props.general.isShowValueGrid">
+                                                       ng-disabled="!wiModal.props.general.showValueGrid">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="col-sm-7">
                                                 <label for="isShowDepthGrid" class="normal-text">
-                                                    <input type="checkbox" id="isShowDepthGrid" value=""
-                                                           ng-model="wiModal.props.general.isShowDepthGrid">
+                                                    <input type="checkbox" id="showDepthGrid" value=""
+                                                           ng-model="wiModal.props.general.showDepthGrid">
                                                     Show Depth Grid
                                                 </label>
                                             </div>
@@ -142,7 +141,7 @@
                                     <div class="padding-left-20-percent">
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 normal-text" for="width">
-                                                Width (inchs)
+                                                Width
                                             </label>
                                             <div class="col-sm-7">
                                                 <input type="number" step="0.001" min="1"
@@ -163,7 +162,7 @@
                                                 <div class="float-left">
                                                     <input kendo-color-picker k-palette="'websafe'"
                                                            class="form-control wi-form-control"
-                                                        ng-model="wiModal.props.general.trackColor"/>
+                                                        ng-model="wiModal.props.general.color"/>
                                                 </div>
                                             </div>
                                         </div>
