--- a/source/dialogs/import-LAS/import-LAS-modal.html
+++ b/source/dialogs/import-LAS/import-LAS-modal.html
@@ -57,7 +57,7 @@
                                 <tbody>
                                     <tr ng-repeat="curve in wiModal.curves">
                                         <td>
-                                            <input type="text" ng-value="::curve.lasName" class="form-control wi-form-control" disabled>
+                                            <input type="text" ng-value="curve.lasName" class="form-control wi-form-control" disabled>
                                         </td>
                                         <td>
                                             <input type="text" ng-model="curve.inputName" class="form-control wi-form-control">
@@ -107,7 +107,7 @@
                                     <label class="control-label col-sm-4 normal-text" for="depthUnit">Depth Unit</label>
                                     <div class="col-sm-8">
                                         <input type="text" id="depthUnit" name="depthUnit"
-                                               ng-model="depthUnit" class="form-control wi-form-control" disabled>
+                                               ng-value="wiModal.selectedWell.depthUnit" class="form-control wi-form-control" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -142,37 +142,37 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-4 normal-text">Step</label>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" disabled ng-value="::wiModal.lasInfo.step">
+                                        <input type="text" class="form-control wi-form-control" disabled ng-value="wiModal.lasInfo.step">
                                     </div>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" ng-value="::wiModal.lasInput.step" disabled>                                        
+                                        <input type="text" class="form-control wi-form-control" ng-value="wiModal.lasInput.step" disabled>                                        
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-4 normal-text">Top Depth</label>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" disabled ng-value="::wiModal.lasInfo.topDepth">
+                                        <input type="text" class="form-control wi-form-control" disabled ng-value="wiModal.lasInfo.topDepth">
                                     </div>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" ng-value="::wiModal.lasInput.topDepth">                                        
+                                        <input type="text" class="form-control wi-form-control" ng-model="wiModal.lasInput.topDepth">                                        
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-4 normal-text">Bottom Depth</label>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" disabled ng-value="::wiModal.lasInfo.bottomDepth">
+                                        <input type="text" class="form-control wi-form-control" disabled ng-value="wiModal.lasInfo.bottomDepth">
                                     </div>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" ng-value="::wiModal.lasInput.bottomDepth">                                        
+                                        <input type="text" class="form-control wi-form-control" ng-model="wiModal.lasInput.bottomDepth">                                        
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-sm-4 normal-text">Depth Unit</label>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" disabled ng-value="::wiModal.lasInfo.depthUnit">
+                                        <input type="text" class="form-control wi-form-control" disabled ng-value="wiModal.lasInfo.depthUnit">
                                     </div>
                                     <div class="col-sm-4">
-                                        <input type="text" class="form-control wi-form-control" ng-value="::wiModal.lasInput.depthUnit">                                        
+                                        <input type="text" class="form-control wi-form-control" ng-model="wiModal.lasInput.depthUnit">                                        
                                     </div>
                                 </div>
                             </div>
