--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -192,7 +192,7 @@
                                         <tbody>
                                             <tr ng-repeat="curve in wiModal.curves"
                                                 ng-class="{selected:$index == selectedRow}"
-                                                ng-click="wiModal.setClickedRowCurve($index)">
+                                                ng-click="wiModal.setClickedRow($index)">
                                                 <td>
                                                     <input type="text" ng-model="curve.alias" name="curveName"
                                                             class="form-control wi-form-control"
@@ -206,12 +206,12 @@
                                                            ng-change="wiModal.curvesChanged[$index] = true;">
                                                 </td>
                                                 <td>
-                                                    <input type="text" ng-model="curve.minValue"
+                                                    <input type="number" ng-model="curve.minValue"
                                                            class="form-control wi-form-control"
                                                            ng-change="wiModal.curvesChanged[$index] = true;">
                                                 </td>
                                                 <td>
-                                                    <input type="text" ng-model="curve.maxValue"
+                                                    <input type="number" ng-model="curve.maxValue"
                                                            class="form-control wi-form-control"
                                                            ng-change="wiModal.curvesChanged[$index] = true;">
                                                 </td>
@@ -302,7 +302,7 @@
                                     </table>
                                 </div>
                                 <div class="width-5-percent float-left padding-left-5px">
-                                    <button class="btn btn-default" ng-click="wiModal.removeRow();">
+                                    <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
                                             <span class="delete-16x16"></span>
                                         </button>
                                     <button class="btn btn-default" ng-click="wiModal.addRow();">
