--- a/source/dialogs/symbol-style/symbol-style-modal.html
+++ b/source/dialogs/symbol-style/symbol-style-modal.html
@@ -84,8 +84,12 @@
                                             <!-- <input kendo-color-picker k-palette="'websafe'"
                                                    class="form-control wi-form-control"
                                                    ng-model="wiModal.options.lines.color"/> -->
-                                            <input type="color" name=""
+                                            <!-- <input type="color" name="" data-alphacontrol="alpha-range"
+                                                    ng-model="wiModal.options.symbolStyle.symbolFillStyle"> -->
+                                            <input type="text" name="" id="testColor"
+                                                    class="form-control wi-form-control" 
                                                     ng-model="wiModal.options.symbolStyle.symbolFillStyle">
+                                            
                                         </div>
                                     </div>
                                 </div>
