--- a/source/dialogs/family-edit/family-edit-modal.html
+++ b/source/dialogs/family-edit/family-edit-modal.html
@@ -2,7 +2,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<button type="button" class="close" ng-click="wiModal.close()" aria-hidden="true">&times;</button>
 				<h4><span class="curve-header-edit-16x16"></span>&nbsp;Family Edit</h4>
 			</div>
 			<div class="modal-body">
