--- a/source/dialogs/add-curve/add-curve-modal.html
+++ b/source/dialogs/add-curve/add-curve-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
 
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="curve-input-32x32"></span>&nbsp;Add New Curve</h4>
                 <h5 class="modal-infomation-title">&nbsp;Curve Infomation</h5>
 
@@ -57,8 +57,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
