--- a/source/dialogs/add-new-well/add-new-modal.html
+++ b/source/dialogs/add-new-well/add-new-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" data-dismiss="modal"
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();"
                         aria-hidden="true">&times;
                 </button>
                 <h4 class="modal-title"><span class="well-marker-add-32x32"></span>&nbsp;Create New Well</h4>
@@ -51,8 +51,8 @@
                         ng-disabled="!wiModal.wellName || !wiModal.topDepth || !wiModal.bottomDepth || !wiModal.step || wiModal.isDisabled"
                         ng-click="wiModal.onOkButtonClicked();"><span class="ok-16x16"></span>&nbsp;OK
                 </button>
-                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default"
-                        data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel
+                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
+                    <span class="close-16x16"></span>&nbsp;Cancel
                 </button>
             </div>
         </div>
