--- a/source/dialogs/blank-logplot/blank-logplot-modal.html
+++ b/source/dialogs/blank-logplot/blank-logplot-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4><span class="logplot-new-16x16"></span>&nbsp;Create New Logplot</h4>
             </div>
             <div class="modal-body text-center">
@@ -25,7 +25,7 @@
                     class='btn btn-default'
                     ng-disabled="wiModal.disabled || !(wiModal.name.length)"
                     ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
