--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -2,7 +2,7 @@
 	<div class='modal-dialog modal-sm'>
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<button type="button" class="close" ng-click="wiModal.close('Cancel')" aria-hidden="true">&times;</button>
 				<h4>{{wiModal.title}}</h4>
 			</div>
 			<div class="modal-body text-center">
