--- a/source/dialogs/curve-alias/curve-alias-modal.html
+++ b/source/dialogs/curve-alias/curve-alias-modal.html
@@ -2,7 +2,7 @@
 	<div class='modal-dialog'>
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<button type="button" class="close" ng-click="wiModal.close('Cancel')" aria-hidden="true">&times;</button>
 				<h4><span class="curve-header-edit-16x16"></span>&nbsp;Curve Alias</h4>
 			</div>
 			<div class="modal-body">
