--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
 
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="curve-properties-16x16"></span>&nbsp;Curve Properties</h4>
             </div>
             <div class="modal-body" style="padding-bottom:0;">
@@ -189,7 +189,7 @@
             <div class="modal-footer">
                 <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default"><span class="apply-16x16"></span>&nbsp;Apply</button>
                 <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
