--- a/source/dialogs/depth-conversion/depth-conversion-modal.html
+++ b/source/dialogs/depth-conversion/depth-conversion-modal.html
@@ -2,7 +2,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<button type="button" class="close" ng-click="wiModal.close()" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">&nbsp;Depth Conversion</h4>
 			</div>
 			<div class="modal-body">
@@ -77,7 +77,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" ng-click="wiModal.runClick()" class="btn btn-default"><span class="run-16x16"></span>&nbsp;Run</button>
-                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
 			</div>
 		</div>
 	</div>
