--- a/source/dialogs/error-message/error-message-modal.html
+++ b/source/dialogs/error-message/error-message-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog modal-sm'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Error</h4>
             </div>
             <div class="modal-body text-center padding-2em">
