--- a/source/dialogs/input-curve/input-curve-modal.html
+++ b/source/dialogs/input-curve/input-curve-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4><span class="logplot-new-16x16"></span>&nbsp;Create New Logplot</h4>
                 <p>Log plot</p>
             </div>
@@ -23,7 +23,7 @@
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
