--- a/source/dialogs/unit-setting/unit-setting-modal.html
+++ b/source/dialogs/unit-setting/unit-setting-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.close()" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="project-open-16x16"></span>&nbsp;FRMUnitSettings</h4>
             </div>
             <div class="modal-body">              
@@ -161,8 +161,8 @@
               </form>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.close(wiModal.selectedData);" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.close('Cancel click')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.close(wiModal.selectedData);" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.close('Cancel click')" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
