--- a/source/dialogs/well-header/well-header-modal.html
+++ b/source/dialogs/well-header/well-header-modal.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-1000">
     <div class="modal-content">
       <div class="modal-header container-fluid">
-        <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" ng-click="wiModal.close('Cancel')" aria-hidden="true">&times;</button>
         <h4 class="modal-title"><span class="project-new-16x16"></span>&nbsp;Well Header</h4>
 
       </div>
@@ -213,8 +213,8 @@
       </div>
       <div class="modal-footer container-fluid">
         
-        <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
-        <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+        <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+        <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
         
       </div>
     </div>
